# Integrated-Backup-Monitoring-System

./: .dockerignore  .gitignore  Codex_Implementation_Guide.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  scheduler.py
app/api/: routes.py
app/clients/: __init__.py  dxi_cli_client.py  i6000_rest_client.py  networker_rest_client.py  snmp_client.py  zfs_rest_client.py
app/collectors/: __init__.py  base.py  dd_snmp_collector.py  dxi_cli.py  dxi_cli_snmp_collector.py  factory.py  i6000_rest.py  i6000_rest_collector.py  networker_rest.py  networker_rest_collector.py  rest.py  snmp.py  zfs_rest.py  zfs_rest_collector.py
app/core/: config.py  metrics.py
app/parsers/: __init__.py  dd_snmp_parser.py  dxi_cli_parser.py  i6000_rest_parser.py  networker_rest_parser.py  zfs_rest_parser.py
app/processors/: __init__.py  derived.py
app/writers/: __init__.py  elasticsearch.py
config/: collector.dd.example.yaml  collector.dxi.example.yaml  collector.example.yaml  collector.i6000.example.yaml  collector.networker.example.yaml  collector.zfs.example.yaml
docs/: backup_dashboard_architecture.pptx  dd_snmp_collection.md  dxi_cli_collection.md  i6000_rest_collection.md  snmp_oid_reference.md
k8s/: dd.yaml  dxi.yaml  i6000.yaml  kustomization.yaml  networker.yaml  zfs.yaml
tests/: test_collectors.py  test_config.py  test_elasticsearch_writer.py  test_scheduler.py
tools/: generate_architecture_visuals.ps1
