[project]
name = "backup-dashboard-collector"
version = "0.1.0"
description = "FastAPI collector system for an integrated backup dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dxi = [
    "elasticsearch>=8.14.0",
    "paramiko>=3.4.0",
    "pysnmp>=4.4.12",
]
dd = [
    "elasticsearch>=8.14.0",
    "pysnmp>=4.4.12",
]
i6000 = [
    "elasticsearch>=8.14.0",
    "httpx>=0.27.0",
]
networker = [
    "elasticsearch>=8.14.0",
    "httpx>=0.27.0",
]
zfs = [
    "elasticsearch>=8.14.0",
    "httpx>=0.27.0",
]
dev = [
    "elasticsearch>=8.14.0",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "pysnmp>=4.4.12",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
backup-collector-api = "app.main:run"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
