[project]
name = "backup-dashboard-collector"
version = "0.1.0"
description = "FastAPI collector system for an integrated backup dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dxi = [
    "elasticsearch==9.4.1",
    "paramiko>=3.4.0",
    "pysnmp==7.1.27",
]
dd = [
    "elasticsearch==9.4.1",
    "pysnmp==7.1.27",
]
i6000 = [
    "elasticsearch==9.4.1",
    "httpx>=0.27.0",
]
networker = [
    "elasticsearch==9.4.1",
    "httpx>=0.27.0",
]
zfs = [
    "elasticsearch==9.4.1",
    "httpx>=0.27.0",
]
dev = [
    "elasticsearch==9.4.1",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "pysnmp==7.1.27",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
backup-collector-api = "app.main:run"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
